// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encodeData should AVRO encode a null 1`] = `null`;

exports[`encodeData should AVRO encode a valid message 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    1,
    2,
    49,
    46,
    65,
    32,
    115,
    105,
    109,
    112,
    108,
    101,
    32,
    116,
    101,
    115,
    116,
    32,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    32,
    49,
  ],
  "type": "Buffer",
}
`;

exports[`encodeData should NOT AVRO encode a null 1`] = `null`;

exports[`encodeData should NOT AVRO encode a valid message with no schema 1`] = `
Object {
  "data": Array [
    123,
    34,
    107,
    101,
    121,
    34,
    58,
    34,
    49,
    34,
    44,
    34,
    116,
    101,
    120,
    116,
    34,
    58,
    34,
    65,
    32,
    115,
    105,
    109,
    112,
    108,
    101,
    32,
    116,
    101,
    115,
    116,
    32,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    32,
    49,
    34,
    125,
  ],
  "type": "Buffer",
}
`;
